WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80568
DFG CFA incorrectly handles ValueToInt32
https://bugs.webkit.org/show_bug.cgi?id=80568
Summary
DFG CFA incorrectly handles ValueToInt32
Filip Pizlo
Reported
2012-03-07 21:21:19 PST
The code completely fails to match up with what DFG::SpeculativeJIT is doing. Not to mention that it makes no sense at all.
Attachments
the patch
(1.58 KB, patch)
2012-03-07 21:36 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-03-07 21:36:59 PST
Created
attachment 130764
[details]
the patch
Filip Pizlo
Comment 2
2012-03-08 01:55:42 PST
Comment on
attachment 130764
[details]
the patch Reviewed in person by Gavin.
Filip Pizlo
Comment 3
2012-03-08 02:02:40 PST
Landed in
http://trac.webkit.org/changeset/110159
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug