DFG CFA incorrectly handles ValueToInt32 https://bugs.webkit.org/show_bug.cgi?id=80568

Reviewed by Gavin Barraclough.

Changed it match exactly the decision pattern used in
DFG::SpeculativeJIT::compileValueToInt32

* dfg/DFGAbstractState.cpp:
(JSC::DFG::AbstractState::execute):



Canonical link: https://commits.webkit.org/97764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110159 268f45cc-cd09-0410-ab3c-d52691b4dbfc